--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <main class="page-main">
       <div class="main-inner">
 
-        <h1 class="hero-title">Turn STLFlix models into real prints.</h1>
+        <h1 class="hero-title">Turn STL files into real prints.</h1>
         <p class="hero-subtitle">
           Paste a public <strong>STLFlix</strong> link. I’ll email you pricing, ETA, and any quick questions before printing.
         </p>
