--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 
         <h1 class="hero-title">Turn STL files into real prints.</h1>
         <p class="hero-subtitle">
-          Paste a public <strong>STLFlix</strong> link. I’ll email you pricing, ETA, and any quick questions before printing.
+          Paste a public <strong>STL File</strong> link. I’ll email you pricing, ETA, and any quick questions before printing.
         </p>
 
         <div class="card hero-card">
